# canvas

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  documentation.yml  feature.yml
core/: main.py  routers.py
core/configs/: dev.yaml  prod.yaml  stage.yaml
core/controllers/: __init__.py  agent_controller.py  base_controller.py  crew_controller.py  flow_engine_controller.py  model_controller.py  prompt_controller.py  relation_controller.py  task_controller.py
core/daos/: __init__.py  agent_dao.py  base_dao.py  crew_dao.py  model_dao.py  prompt_dao.py  relation_dao.py  task_dao.py
core/dtos/agent/: __init__.py  agent_dto.py  code_execution_modes.py
core/dtos/base/: base_dto.py
core/dtos/crew/: __init__.py  crew_dto.py
core/dtos/entity/: __init__.py  agent_entity.py  crew_entity.py  entity.py  entity_id.py  entity_type.py  model_entity.py  prompt_entity.py  task_entity.py
core/dtos/model/: __init__.py  model_dto.py  model_types.py
core/dtos/prompt/: __init__.py  prompt_dto.py  prompt_types.py
core/dtos/relation/: __init__.py  relation_direction.py  relation_dto.py
core/repositories/: __init__.py  agent_repository.py  base_repository.py  crew_repository.py  model_repository.py  prompt_repository.py  relation_repository.py  task_repository.py
docker/core/: Dockerfile
docker/ui/: Dockerfile
scripts/: load_env.sh
shared/utils/: funcs.py  logger.py
ui/: index.html  package-lock.json  package.json
ui-temp/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
ui-temp/src/: App.tsx  index.css
ui/src/: App.tsx
(+104 files in other folders)
